Upgrade ttf_OS_2_t structure to support v.2 (96-byte) OS/2 table. Bug 688536.

DETAILS:
We don't use new fields in the 96-byte structure and continue to
create 86-byte structures. The extra space is used as a buffer when
we copy the structure intact.

DIFFERENCES:
None

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@6574 a1074d23-0009-0410-80fe-cf8c14f379e6